Removing dist folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -101,6 +101,10 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "src/**/*.ts"
+    "src/"
   ],
+  "compileOnSave": false,
+  "exclude": [
+    "dist/"
+  ]
 }
